# Handy

./: .gitignore  AGENTS.md
docs/: prd-gtk-port.md
handy-gtk/: Cargo.toml
handy-gtk/src/: app_context.rs  audio_feedback.rs  autostart.rs  backend_event.rs  cli.rs  config.rs  ipc.rs  lib.rs  main.rs  paste.rs  recording_coordinator.rs  shortcut.rs  tray.rs
handy-gtk/src/audio_toolkit/: mod.rs  utils.rs
handy-gtk/src/audio_toolkit/audio/: device.rs  mod.rs  recorder.rs  resampler.rs  visualizer.rs
handy-gtk/src/audio_toolkit/vad/: mod.rs  silero.rs  smoothed.rs
handy-gtk/src/managers/: audio.rs  history.rs  mod.rs  model.rs  pipeline.rs  transcription.rs
handy-gtk/src/ui/: app.rs  mod.rs  overlay.rs  settings_window.rs
handy-gtk/src/ui/pages/: general.rs  history.rs  input.rs  mod.rs  models.rs  output.rs
