[package]
name = "handy-gtk"
version = "0.1.0"
edition = "2021"
description = "Handy Linux GTK4 port"
license = "MIT"

[[bin]]
name = "handy-gtk"
path = "src/main.rs"

[dependencies]
dirs = "5"
handy-keys = "0.2.4"
ksni = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
zbus = { version = "4", default-features = false, features = ["tokio", "p2p"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
clap = { version = "4", features = ["derive"] }
gtk4 = "0.11"
relm4 = "0.11"
gtk4-layer-shell = "0.8"

[dev-dependencies]
tempfile = "3"
