[package]
name = "handy-gtk"
version = "0.1.0"
edition = "2021"
description = "Handy Linux GTK4 port"
license = "MIT"

[[bin]]
name = "handy-gtk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
handy-keys = "0.2.4"
ksni = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
zbus = { version = "4", default-features = false, features = ["tokio", "p2p"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
clap = { version = "4", features = ["derive"] }
gtk4 = "0.11"
libadwaita = { version = "0.9", features = ["v1_9"] }
relm4 = { version = "0.11", features = ["libadwaita", "gnome_50"] }
gtk4-layer-shell = "0.8"
rodio = { version = "0.22", features = ["wav"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"

[dev-dependencies]
tempfile = "3"
